force-app/main/default/objects/Survey__c/fields/Of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Of_Dependents__c</fullName>
    <description>GS
Purpose: Baseline Survey.</description>
    <inlineHelpText>How many dependents do you have? Dependents are people who rely on you as the primary support.</inlineHelpText>
    <label># Of Dependents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>