force-app/main/default/objects/Survey__c/fields/Of_Dependents_Over_65__c.field-meta.xml
<CustomField>
    <fullName>Of_Dependents_Over_65__c</fullName>
    <description>GS
Purpose: Baseline Survey.</description>
    <inlineHelpText>How many dependents over 65?</inlineHelpText>
    <label># Of Dependents Over 65</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>