force-app/main/default/objects/Survey__c/fields/Of_Dependents_Under_18__c.field-meta.xml
<CustomField>
    <fullName>Of_Dependents_Under_18__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>How many dependents under the age of 18?</inlineHelpText>
    <label># Of Dependents Under 18</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>