force-app/main/default/objects/Survey__c/fields/Other_Apprenticeship_Barrier__c.field-meta.xml
<CustomField>
    <fullName>Other_Apprenticeship_Barrier__c</fullName>
    <description>TL
Purpose: For apprentice survey.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please tell us about any other barrier(s) you face or might face that is not listed above.</inlineHelpText>
    <label>Other Apprenticeship Barrier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>