force-app/main/default/objects/Survey__c/fields/Other_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Other_Feedback__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture data if other feedback</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>