force-app/main/default/objects/Survey__c/fields/Other_Job_Industry__c.field-meta.xml
<CustomField>
    <fullName>Other_Job_Industry__c</fullName>
    <description>GS
Business Unit: Baseline Survey
Purpose: If Other is selected for Job Industry, this is the fill in.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Job Industry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>