force-app/main/default/objects/Survey__c/fields/Other_Provided_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Provided_Services__c</fullName>
    <description>GS
Purpose: Baseline Survey, when Other is selected on Provided these Services field this would be the reason why they selected Other.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Provided Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>