force-app/main/default/objects/Survey__c/fields/Outside_Home_Employment__c.field-meta.xml
<CustomField>
    <fullName>Outside_Home_Employment__c</fullName>
    <description>Created by: JA
Business Unit: WFT
Purpose: Capture an individual&apos;s outside home employment status to better understand our students and what support services they may need.</description>
    <inlineHelpText>Are they currently employed outside the home?</inlineHelpText>
    <label>Outside Home Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No, currently not employed outside the home</fullName>
            </value>
            <value>
                <fullName>Employed part-time (under 20 hrs)</fullName>
            </value>
            <value>
                <fullName>Employed almost full-time (up to 35 hrs)</fullName>
            </value>
            <value>
                <fullName>Employed full-time (35 hrs+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>