force-app/main/default/objects/Survey__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Created by: JA
Purpose: Capture the phone number of a surveyee to update the associated contact record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>