force-app/main/default/objects/Survey__c/fields/Post_Secondary_School__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_School__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays survey data
Populated: Auto via survey / manual</description>
    <inlineHelpText>Has this person completed any post secondary school? (i.e. trade school, college, graduate school)</inlineHelpText>
    <label>Post Secondary School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>