force-app/main/default/objects/Survey__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays address information
Populated: Auto via survey / manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>