force-app/main/default/objects/Survey__c/fields/Previous_Bitwise_Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Bitwise_Course_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS
Purpose: WFT Survey</description>
    <inlineHelpText>Have you ever been enrolled in a Bitwise course before?</inlineHelpText>
    <label>Previous Bitwise Course Enrollment</label>
    <type>Checkbox</type>
</CustomField>