force-app/main/default/objects/Survey__c/fields/Previous_Year_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Household_Income__c</fullName>
    <description>Created by: JA
Purpose: Capture an individual&apos;s total household income for the previous year.</description>
    <inlineHelpText>What was their total household income for the previous year?</inlineHelpText>
    <label>Previous Year Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Brackets</valueSetName>
    </valueSet>
</CustomField>