force-app/main/default/objects/Survey__c/fields/Primary_Activity__c.field-meta.xml
<CustomField>
    <fullName>Primary_Activity__c</fullName>
    <description>Created by: VC
Purpose: If not employed right now, what is your primary activity?</description>
    <inlineHelpText>If you are not employed right now, what is your primary activity?</inlineHelpText>
    <label>Primary Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Furthering my education</fullName>
            </value>
            <value>
                <fullName>Caring for children</fullName>
            </value>
            <value>
                <fullName>Caring for other family members</fullName>
            </value>
            <value>
                <fullName>Taking time for my own health</fullName>
            </value>
            <value>
                <fullName>Planning/starting a business</fullName>
            </value>
            <value>
                <fullName>Working on a personal project (e.g., book, artistic endeavor)</fullName>
            </value>
            <value>
                <fullName>Volunteering, engaging in service or unpaid work</fullName>
            </value>
            <value>
                <fullName>Traveling or taking time off</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>