force-app/main/default/objects/Survey__c/fields/Primary_Activity_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Primary_Activity_Reasons__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If &quot;Other&quot; was selective as a Primary Activity, the reason displays here.</inlineHelpText>
    <label>Primary Activity Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>