force-app/main/default/objects/Survey__c/fields/Prior_Bitwise_Apprentice__c.field-meta.xml
<CustomField>
    <fullName>Prior_Bitwise_Apprentice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>Have you ever been a Bitwise/Geekwise apprentice?</inlineHelpText>
    <label>Prior Bitwise Apprentice</label>
    <type>Checkbox</type>
</CustomField>