force-app/main/default/objects/Survey__c/fields/Prior_Bitwise_Student__c.field-meta.xml
<CustomField>
    <fullName>Prior_Bitwise_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>Have you been a student in any Geekwise/Bitwise Industries classes?</inlineHelpText>
    <label>Prior Bitwise Student</label>
    <type>Checkbox</type>
</CustomField>