force-app/main/default/objects/Survey__c/fields/Prior_Existing_Bitwise_Work__c.field-meta.xml
<CustomField>
    <fullName>Prior_Existing_Bitwise_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>Did you work for Bitwise Industries at any point in your career?</inlineHelpText>
    <label>Prior Existing Bitwise Work</label>
    <type>Checkbox</type>
</CustomField>