force-app/main/default/objects/Survey__c/fields/Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy__c</fullName>
    <description>GS
Business Unit: WFT
Purpose: Students agreement when submitting survey.</description>
    <label>Privacy Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have reviewed Bitwise Industries&apos; privacy policy and agree to its terms and conditions.</fullName>
            </value>
            <value>
                <fullName>I have reviewed and agree to BW Industries, Inc.&apos;s Privacy Policy and Terms of Use.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>