force-app/main/default/objects/Survey__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays survey data
Populated: Auto via survey / manual</description>
    <inlineHelpText>What race does this person consider themselves?</inlineHelpText>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latinx</fullName>
            </value>
            <value>
                <fullName>White or Caucasian</fullName>
            </value>
            <value>
                <fullName>Black or African-American</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Native American or Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Two or more races</fullName>
            </value>
            <value>
                <fullName>Decline to self-identify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>