force-app/main/default/objects/Survey__c/fields/Racial_Ethnic_Category__c.field-meta.xml
<CustomField>
    <fullName>Racial_Ethnic_Category__c</fullName>
    <description>Created by: JA
Purpose: Capture an individual&apos;s racial/ethnic category they would use to describe themselves?</description>
    <inlineHelpText>Which racial/ethnic categories would they use to describe themselves?</inlineHelpText>
    <label>Racial/Ethnic Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Racial_Ethnic_Category</valueSetName>
    </valueSet>
</CustomField>