force-app/main/default/objects/Survey__c/fields/Racial_Ethnic_Group__c.field-meta.xml
<CustomField>
    <fullName>Racial_Ethnic_Group__c</fullName>
    <description>Created by: MA
Business unit: WFT
Purpose: Capture an individual&apos;s racial/ethnic group they would use to describe themselves.</description>
    <inlineHelpText>Which racial/ethnic group would they use to describe themselves?</inlineHelpText>
    <label>Racial/Ethnic Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Racial_Ethnic_Category</valueSetName>
    </valueSet>
</CustomField>