force-app/main/default/objects/Survey__c/fields/Rate_How_Bitwise_Courses_Prepared_You__c.field-meta.xml
<CustomField>
    <fullName>Rate_How_Bitwise_Courses_Prepared_You__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>How satisfied is the student with Bitwise courses and have we prepared or will prepare them to be qualified to do substantive tech-related or other fulfilling work.</inlineHelpText>
    <label>Rate How Bitwise Courses Prepared You</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfaction_Rating</valueSetName>
    </valueSet>
</CustomField>