force-app/main/default/objects/Survey__c/fields/Rate_The_Preparation_For_The_Industry__c.field-meta.xml
<CustomField>
    <fullName>Rate_The_Preparation_For_The_Industry__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>How satisfied is the student with that Bitwise/Geekwise courses have prepared them to adapt to future developments in their industry.</inlineHelpText>
    <label>Rate The Preparation For The Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfaction_Rating</valueSetName>
    </valueSet>
</CustomField>