force-app/main/default/objects/Survey__c/fields/Rate_The_Skills_Learned_At_BW_Geekwise__c.field-meta.xml
<CustomField>
    <fullName>Rate_The_Skills_Learned_At_BW_Geekwise__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>How satisfied is the student with the skills they learned at Bitwise/Geekwise reflect up-to-date conditions and knowledge.</inlineHelpText>
    <label>Rate The Skills Learned At BW/Geekwise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfaction_Rating</valueSetName>
    </valueSet>
</CustomField>