force-app/main/default/objects/Survey__c/fields/Received_Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Received_Financial_Assistance__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>If a student receives any financial assistance from Geekwise/Bitwise to complete courses.</inlineHelpText>
    <label>Received Financial Assistance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>