force-app/main/default/objects/Survey__c/fields/Registered_Class__c.field-meta.xml
<CustomField>
    <fullName>Registered_Class__c</fullName>
    <description>GS
For survey reporting data</description>
    <formula>TEXT(Registration__r.Class__r.Class__c)</formula>
    <label>Registered Class</label>
    <type>Text</type>
</CustomField>