force-app/main/default/objects/Survey__c/fields/Reliable_Computer__c.field-meta.xml
<CustomField>
    <fullName>Reliable_Computer__c</fullName>
    <description>Created by: JA
Purpose: Capture if an individual has reliable access to a laptop computer to use for class to better design classes and support services.</description>
    <inlineHelpText>Do they have consistent and reliable access to a laptop computer to use for class?</inlineHelpText>
    <label>Reliable Computer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I use a Mac laptop that I own</fullName>
            </value>
            <value>
                <fullName>Yes, I use a PC laptop that I own</fullName>
            </value>
            <value>
                <fullName>Yes, I use a Mac laptop that I borrowed</fullName>
            </value>
            <value>
                <fullName>Yes, I use a PC laptop that I borrowed</fullName>
            </value>
            <value>
                <fullName>No, I do not have consistent and reliable access to a laptop computer I can use for class</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Yes, I/my family own a computer</fullName>
            </value>
            <value>
                <fullName>Yes, I/my family can borrow a computer</fullName>
            </value>
            <value>
                <fullName>No, I do not have consistent and reliable access to a computer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>