force-app/main/default/objects/Survey__c/fields/Reliable_Internet_Access__c.field-meta.xml
<CustomField>
    <fullName>Reliable_Internet_Access__c</fullName>
    <description>Created by: JA
Purpose: Capture if an individual has consistent reliable high-speed internet access at home to better design classes and support services.</description>
    <inlineHelpText>Do they have consistent and reliable access to high-speed internet at home?</inlineHelpText>
    <label>Reliable Internet Access?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I have consistent and reliable access to a high-speed internet connection at home</fullName>
            </value>
            <value>
                <fullName>No, I do not have consistent and reliable access to a high-speed internet connection at home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>