force-app/main/default/objects/Survey__c/fields/Reliable_Internet_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reliable_Internet_Other_Reason__c</fullName>
    <description>TL
Purpose: For Apprentice Survey.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please explain how you accessed the internet if you answered &apos;Other&apos; above.</inlineHelpText>
    <label>Reliable Internet Other Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>