force-app/main/default/objects/Survey__c/fields/Reopening_Excitement__c.field-meta.xml
<CustomField>
    <fullName>Reopening_Excitement__c</fullName>
    <description>Created by: CC
Department: CW
Purpose: Capture data about reopening excitement.</description>
    <label>Reopening Excitement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>