force-app/main/default/objects/Survey__c/fields/Scholarship_Received__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Received__c</fullName>
    <label>Scholarship Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I received a full scholarship.</fullName>
            </value>
            <value>
                <fullName>Yes, I received a partial scholarship.</fullName>
            </value>
            <value>
                <fullName>No, I did not receive a scholarship.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>