force-app/main/default/objects/Survey__c/fields/Self_Described_Gender__c.field-meta.xml
<CustomField>
    <fullName>Self_Described_Gender__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Display survey data
Populated: Auto via survey / manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Self-Described Gender</label>
    <length>36</length>
    <type>Text</type>
</CustomField>