force-app/main/default/objects/Survey__c/fields/Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Orientation__c</fullName>
    <description>Created by: JA
Purpose: Capture an individual&apos;s sexual orientation to better design classes and support services</description>
    <inlineHelpText>What is their sexual orientation?</inlineHelpText>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sexual_Orientation</valueSetName>
    </valueSet>
</CustomField>