force-app/main/default/objects/Survey__c/fields/Single_Parent__c.field-meta.xml
<CustomField>
    <fullName>Single_Parent__c</fullName>
    <description>GS
Business: WFT
Purpose: For WFT Student Survey. Checks if the field is selected in Applicable Groups multiselect picklist.</description>
    <formula>INCLUDES( Applicable_Groups__c, &quot;Single Parent&quot;)</formula>
    <label>Single Parent</label>
    <type>Checkbox</type>
</CustomField>