force-app/main/default/objects/Survey__c/fields/Started_Company__c.field-meta.xml
<CustomField>
    <fullName>Started_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: VC
Purpose: Is the person starting a company</description>
    <inlineHelpText>Have you ever started a company?</inlineHelpText>
    <label>Started Company</label>
    <type>Checkbox</type>
</CustomField>