force-app/main/default/objects/Survey__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>GS
Purpose: WFT Survey</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>