force-app/main/default/objects/Survey__c/fields/Student_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Student_Dropped__c</fullName>
    <description>TL
Purpose: Pulls the value of the field &quot;Dropped&quot; from registration.</description>
    <formula>Registration__r.Dropped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Dropped</label>
    <type>Checkbox</type>
</CustomField>