force-app/main/default/objects/Survey__c/fields/Student_Source__c.field-meta.xml
<CustomField>
    <fullName>Student_Source__c</fullName>
    <description>BN
GW USers
To track where students come from on surveys
Pop from survey results</description>
    <label>Student Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WFT_Student_Source</valueSetName>
    </valueSet>
</CustomField>