force-app/main/default/objects/Survey__c/fields/Student_Source_Fill_In__c.field-meta.xml
<CustomField>
    <fullName>Student_Source_Fill_In__c</fullName>
    <description>BN
GW USers
To track where students come from on surveys
Pop from survey results</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Student Source Fill In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>