force-app/main/default/objects/Survey__c/fields/Subcategory_Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Subcategory_Race_Ethnicity__c</fullName>
    <label>Subcategory Race/Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian</fullName>
            </value>
            <value>
                <fullName>Alaska Native</fullName>
            </value>
            <value>
                <fullName>Central or South American Indian</fullName>
            </value>
            <value>
                <fullName>Cambodian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>Hmong</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Pakistani</fullName>
            </value>
            <value>
                <fullName>Singaporean</fullName>
            </value>
            <value>
                <fullName>Asian Indian</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Tibetan</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>African American</fullName>
            </value>
            <value>
                <fullName>Barbadian</fullName>
            </value>
            <value>
                <fullName>Ethiopian</fullName>
            </value>
            <value>
                <fullName>Ghanian</fullName>
            </value>
            <value>
                <fullName>Haitian</fullName>
            </value>
            <value>
                <fullName>Jamaican</fullName>
            </value>
            <value>
                <fullName>Nigerian</fullName>
            </value>
            <value>
                <fullName>Somali</fullName>
            </value>
            <value>
                <fullName>South African</fullName>
            </value>
            <value>
                <fullName>Columbian</fullName>
            </value>
            <value>
                <fullName>Cuban</fullName>
            </value>
            <value>
                <fullName>Dominican</fullName>
            </value>
            <value>
                <fullName>Ecuadorian</fullName>
            </value>
            <value>
                <fullName>Guatemalan</fullName>
            </value>
            <value>
                <fullName>Mexican or Mexican American</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>