force-app/main/default/objects/Survey__c/fields/Sunday_Before_Class__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Before_Class__c</fullName>
    <description>Created By: CC
Department: WFT
Purpose: Get the Sunday before class starts.</description>
    <formula>Registration__r.Class__r.Sunday_Before_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday Before Class</label>
    <type>Date</type>
</CustomField>