force-app/main/default/objects/Survey__c/fields/Top_Course_Reason__c.field-meta.xml
<CustomField>
    <fullName>Top_Course_Reason__c</fullName>
    <description>GS
Purpose: WFT Survey</description>
    <inlineHelpText>Top reason for enrolling in a Bitwise Industries class?</inlineHelpText>
    <label>Top Course Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Career advancement</fullName>
            </value>
            <value>
                <fullName>Career change</fullName>
            </value>
            <value>
                <fullName>Workforce re-entry</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Increase earning potential</fullName>
            </value>
            <value>
                <fullName>Have an idea for a tech product or service</fullName>
            </value>
            <value>
                <fullName>Need a community of support</fullName>
            </value>
            <value>
                <fullName>Tried getting technical education elsewhere but haven&apos;t found a program that works.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>