force-app/main/default/objects/Survey__c/fields/U_S_Military_Veteran__c.field-meta.xml
<CustomField>
    <fullName>U_S_Military_Veteran__c</fullName>
    <description>GS
Business: WFT
Purpose: For WFT Student Survey. Checks if the field is selected in Applicable Groups multiselect picklist.</description>
    <formula>INCLUDES(Applicable_Groups__c, &quot;U.S. Military Veteran&quot;)</formula>
    <label>U.S. Military Veteran</label>
    <type>Checkbox</type>
</CustomField>