force-app/main/default/objects/Survey__c/fields/Unemployment_Benefits_Received_Covid__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Benefits_Received_Covid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS
Purpose: Baseline Survey.</description>
    <label>Unemployment Benefits Received (Covid)</label>
    <type>Checkbox</type>
</CustomField>